--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,6 +113,24 @@ services:
       - KAFKA_PORT=19092
     ports:
       - '5001:5001'
+  role-service:
+    build:
+      context: ./../role-service
+      dockerfile: Dockerfile
+    container_name: roleService
+    restart: always
+    environment:
+      - DB_TYPE=postgres
+      - DB_HOST=postgres
+      - DB_PORT=5432
+      - DB_USERNAME=root
+      - DB_PASSWORD=111111
+      - DB_DATABASE=demo
+      - KAFKAJS_NO_PARTITIONER_WARNING=1
+      - KAFKA_HOST=kafka
+      - KAFKA_PORT=19092
+    ports:
+      - '5002:5002'
 volumes:
   postgres-volume:
     driver: local
